<resources>
    <string name="app_name">Cosmetics Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cosmetics_store">Cosmetics Store</string>
    <string name="welcome_to_the_store">Welcome to the store</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="category">Category</string>
    <string name="favourite">Favourite</string>
    <string name="my_cart">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="useremail_gmail_com">useremail@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="hello">Hello!</string>
    <string name="create_account">Create account</string>
    <string name="beauty_cosmetics">Beauty Cosmetics</string>
    <string name="search">Search...</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="on_the_body_perfume_classic_pink">On The Body Perfume Classic Pink</string>
    <string name="make_order">Make Order</string>
    <string name="username">Username</string>
</resources>